--- a/views/AppController/failed_registration_attempt.html
+++ b/views/AppController/failed_registration_attempt.html
@@ -4,10 +4,11 @@
 {{define "body"}}
 
 
-<form id="failed-registration-attempt-form" action="/process_failed_registration_attempt" method="post" style="margin-bottom:20px;">
+<form id="failed-registration-attempt-form" action="/failed_registration_attempt" method="post" style="margin-bottom:20px;">
 {{ .CSRFTemplateField}}
 
-    <input type="hidden" name="safe_stop_failed_registration_attempt[jurisdiction_id]" value="{{ .ViewData.JurisdictionId }}">
+    <input type="hidden" name="jurisdiction_id" value="{{ .ViewData.JurisdictionId }}">
+    <input type="hidden" name="postal_code" value="{{ .ViewData.PostalCode }}">
 
     <div class="container-fluid">
         <div class="row">
@@ -19,34 +20,34 @@
             <div class="col-sm-12">
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[last_name]" value="{{ .ViewData.User.LastName }}" placeholder="{{ t .CurrentLocale "your_last_name" ""}}">
+                    <input type="text" class="form-control" name="last_name" value="{{ .ViewData.LastName }}" placeholder="{{ t .CurrentLocale "your_last_name" ""}}">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[first_name]" value="{{ .ViewData.User.FirstName }}" placeholder="{{ t .CurrentLocale "your_first_name" ""}}">
+                    <input type="text" class="form-control" name="first_name" value="{{ .ViewData.FirstName }}" placeholder="{{ t .CurrentLocale "your_first_name" ""}}">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[email]" value="{{ .ViewData.User.Email }}" placeholder="{{ t .CurrentLocale "email" ""}}">
+                    <input type="text" class="form-control" name="email" value="{{ .ViewData.Email }}" placeholder="{{ t .CurrentLocale "email" ""}}">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[student_last_name]" placeholder="{{ t .CurrentLocale "student_rider_last_name" ""}}">
+                    <input type="text" class="form-control" name="student_last_name" placeholder="{{ t .CurrentLocale "student_rider_last_name" ""}}">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[student_first_name]" placeholder="{{ t .CurrentLocale "student_rider_first_name" ""}}">
+                    <input type="text" class="form-control" name="student_first_name" placeholder="{{ t .CurrentLocale "student_rider_first_name" ""}}">
                 </div>
 
                 <div class="form-group">
-                    <input type="text" class="form-control" name="safe_stop_failed_registration_attempt[id_or_code_attempted]" value="{{ .ViewData.IdOrCodeAttempted}}" placeholder="{{ t .CurrentLocale "code_or_id_attempted_to_use" ""}}">
+                    <input type="text" class="form-control" name="id_or_code_attempted" value="{{ .ViewData.IdOrCodeAttempted}}" placeholder="{{ t .CurrentLocale "code_or_id_attempted_to_use" ""}}">
                 </div>
 
                 <div class="form-group">
                     <table style="width: 100%;">
                         <tr>
                             <td style="width: 50%;">
-                                <a href="/activate/{{ .ViewData.JurisdictionId }}" class="btn btn-default btn-block no-right-radius">{{ t .CurrentLocale "cancel" ""}}</a>
+                                <a href="/activate/{{ .ViewData.JurisdictionId }}?postal_code={{ .ViewData.PostalCode }}" class="btn btn-default btn-block no-right-radius">{{ t .CurrentLocale "cancel" ""}}</a>
                             </td>
                             <td style="width: 50%;">
                                 <button class="btn btn-safestop btn-block no-left-radius" type="submit">{{ t .CurrentLocale "submit" ""}}</button>
@@ -64,40 +65,36 @@
 
     $(document).ready(function () {
 
-
-
-
-
         FormValidation.formValidation(
                 document.getElementById("failed-registration-attempt-form"),
                 {
                     fields: {
-                        'safe_stop_failed_registration_attempt[last_name]': {
+                        'last_name': {
                             validators: {
                                 notEmpty: {message: "{{ t .CurrentLocale "required" "" }}"}
                             }
                         },
-                        'safe_stop_failed_registration_attempt[first_name]': {
+                        'first_name': {
                             validators: {
                                 notEmpty: {message: "{{ t .CurrentLocale "required" "" }}"}
                             }
                         },
-                        'safe_stop_failed_registration_attempt[id_or_code_attempted]': {
+                        'id_or_code_attempted': {
                             validators: {
                                 notEmpty: {message: "{{ t .CurrentLocale "required" "" }}"}
                             }
                         },
-                        'safe_stop_failed_registration_attempt[student_first_name]': {
+                        'student_first_name': {
                             validators: {
                                 notEmpty: {message: "{{ t .CurrentLocale "required" "" }}"}
                             }
                         },
-                        'safe_stop_failed_registration_attempt[student_last_name]': {
+                        'student_last_name': {
                             validators: {
                                 notEmpty: {message: "{{ t .CurrentLocale "required" "" }}"}
                             }
                         },
-                        'safe_stop_failed_registration_attempt[email]': {
+                        'email': {
                             validators: {
                                 regexp: {
                                     regexp: /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
@@ -118,30 +115,12 @@
                             validating: 'fa fa-refresh',
                         }),
                     }
-                }
-        )
+                })
 
 
 
 
 
-
-
-
-
-
-
-
-        $('form').formValidation({
-            framework: 'bootstrap',
-            excluded: false,
-            feedbackIcons: {
-                valid: 'glyphicon glyphicon-ok',
-                invalid: 'glyphicon glyphicon-remove',
-                validating: 'glyphicon glyphicon-refresh'
-            },
-
-        });
     })
 
 </script>
