--- a/views/AppController/subscription_details.html
+++ b/views/AppController/subscription_details.html
@@ -3,6 +3,443 @@
 {{end}}
 {{define "body"}}
 
-TODO: Put stuff here.
+
+
+
+
+
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 section-header">
+            <div class="title">{{ .ViewData.Subscription.JurisdictionName }} </div>
+            <div class="sub-title">{{ .ViewData.Subscription.ProductName }}</div>
+        </div>
+    </div>
+</div>
+
+
+
+<ul class="list-group" style="margin-bottom: 0px;">
+
+    <li id="sub-account-li" class="list-group-item">
+        <table class="list-nav-item-table">
+            <tr>
+                <td><span style="color:#A12130;" class="title">{{ t .CurrentLocale "manage_sub_accounts" "" }}</span></td>
+                <td>
+                    <i class='fa fa-angle-right nav-arrow'></i>
+                </td>
+            </tr>
+        </table>
+    </li>
+
+    <li class="list-group-item" style="display: none;">
+        <form id="sub-account-form" class="form" method="post" action="/add_sub_account">
+
+            <input type="hidden" value="{{ .ViewData.Subscription.Id }}" name="subscription_id">
+            <div class="form-group">
+                <input id="email" class="form-control" type="text" name="user[email]" autocomplete="off" placeholder="{{ t .CurrentLocale "email" "" }}">
+            </div>
+            <div class="form-group">
+                <input id="password" class="form-control" type="password" name="user[password]" autocomplete="off" placeholder="{{ t .CurrentLocale "password" "" }}">
+            </div>
+            <div class="form-group">
+                <input id="confirm-password" class="form-control" type="password" name="user[password_confirmation]" autocomplete="off" placeholder="{{ t .CurrentLocale "confirm_password" "" }}">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="person[first_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "first_name" "" }}">
+            </div>
+            <div class="form-group">
+                <input class="form-control" type="text" name="person[last_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "last_name" "" }}">
+            </div>
+
+            <div class="form-group">
+                <button class="btn btn-block btn-safestop" id="add-student-button">{{ t .CurrentLocale "add_sub_account" "" }}</button>
+            </div>
+        </form>
+    </li>
+
+    {{ range .ViewData.SubAccountUsers.Users}}
+
+        <li class="list-group-item sub-account-li">
+            <form action="/remove_sub_account" method="post">
+                <input type="hidden" value="{{ .Id }}" name="subscription_sub_account_id">
+            </form>
+
+            <table class="list-sub-item-table">
+                <tr>
+                    <td>
+                        {{ .FullName}}
+                    </td>
+                    <td>
+                        <i class='fa fa-check-square-o remove-student'></i>
+                    </td>
+                </tr>
+            </table>
+        </li>
+
+     {{ end }}
+
+</ul>
+
+
+
+
+
+
+{{ if or (eq .ViewData.Jurisdiction.RegistrationType "Student Identifier") (eq .ViewData.Jurisdiction.RegistrationType "Access Code + Student Identifier") }}
+
+<ul class="list-group" style="margin-bottom:0px;">
+
+    <li id="student-li" class="list-group-item">
+        <table class="list-nav-item-table">
+            <tr>
+                <td><span style="color:#A12130;" class="title">{{ t .CurrentLocale "add_student_id" "" }}</span></td>
+                <td>
+                    <i class='fa fa-angle-right nav-arrow'></i>
+                </td>
+            </tr>
+        </table>
+    </li>
+
+    <li class="list-group-item" style="display: none;">
+        <form id="student-form" class="form" method="post" action="/add_student">
+
+            <input type="hidden" value="{{ .ViewData.Subscription.Id}}" name="subscription_id">
+
+            <div class="form-group">
+                <input id="sis-identifier" class="form-control" type="text" name="student_information[sis_identifier]" autocomplete="off" placeholder="{{ t .CurrentLocale "student_identifier" "" }}">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-block btn-safestop" id="add-student-button">{{ t .CurrentLocale "add_student" "" }}</button>
+            </div>
+        </form>
+    </li>
+
+
+{{range .ViewData.Students.StudentInformations }}
+
+    <li class="list-group-item student-li">
+        <form action="/remove_student" method="post">
+            <input type="hidden" value="{{ $.ViewData.Subscription.Id }}" name="subscription_id">
+            <input type="hidden" value="{{ .Id }}" name="student_information_id">
+        </form>
+        <table class="list-sub-item-table">
+            <tr>
+                <td>
+                {{ .FullName }}
+                </td>
+                <td>
+                    <i class='fa fa-check-square-o remove-student'></i>
+                </td>
+            </tr>
+        </table>
+    </li>
+
+{{ end }}
+
+</ul>
+
+{{ end }}
+
+
+
+
+
+
+
+        {{ if eq .ViewData.Jurisdiction.StudentScanning true}}
+
+<ul class="list-group" style="margin-bottom: 0px;">
+
+    <li id="scan-li" class="list-group-item">
+        <table class="list-nav-item-table">
+            <tr>
+                <td><span style="color:#A12130;" class="title">{{ t .CurrentLocale "manage_student_scanning" "" }}</span></td>
+                <td>
+                    <i class='nav-arrow fa fa-angle-right'></i>
+                </td>
+            </tr>
+        </table>
+    </li>
+
+    <li class="list-group-item" style="display: none;">
+
+
+        {{ if eq .ViewData.Jurisdiction.UseScanCodeMapping true }}
+
+        <form class="form" method="post" action="/add_scan">
+            <input type="hidden" value="1" name="use_scan_code_mapping">
+
+            <input type="hidden" name="jurisdiction_id" value="{{ .ViewDta.Jurisdiction.Id}}">
+            <div class="form-group">
+                <input id="name" class="form-control" type="text" name="sis_identifier" autocomplete="off" placeholder="{{ t .CurrentLocale "student_identifier" "" }}">
+            </div>
+            <div class="form-group">
+                <button class="btn btn-block btn-safestop" id="add-scan-using-scan-code-mapping-button">{{ t .CurrentLocale "add_student" "" }}</button>
+            </div>
+        </form>
+
+        {{ if gt .ViewData.StudentCount 0}}
+        <div class="text-center" style="margin-top: 20px; margin-bottom: 20px;">OR</div>
+        <form class="form" method="post" action="/add_scan">
+
+            <input type="hidden" value="0" name="use_scan_code_mapping">
+
+            {{range .ViewData.Students.StudentInformations}}
+            <input type="hidden" name="bus_rider_scan_notification_subscription[][jurisdiction_id]" value="{{ $.ViewData.Jurisdiction.Id}}">
+            <input type="hidden" name="bus_rider_scan_notification_subscription[][name]" value="{{ .FullName }}">
+            <input type="hidden" name="bus_rider_scan_notification_subscription[][code]" value="{{ .ScanCode }}">
+            {{ end }}
+
+            <div class="form-group">
+                <button class="btn btn-block btn-safestop" id="add-scan-using-scan-code-mapping-button"><%= t('add_my_students', locale: current_locale) %></button>
+            </div>
+        </form>
+        {{ end }}
+
+        {{ else }}
+
+        <form id="scan-form" class="form" method="post" action="/add_scan">
+            <input type="hidden" value="0" name="use_scan_code_mapping">
+            <input type="hidden" name="bus_rider_scan_notification_subscription[][jurisdiction_id]" value="{{ .ViewData.Jurisdiction.Id}}">
+            <div class="form-group">
+                <input id="scan-required-name" class="form-control" type="text" name="bus_rider_scan_notification_subscription[][name]" autocomplete="off" placeholder="{{ t .CurrentLocale "student_name" ""}}">
+            </div>
+            <div class="form-group">
+                <input id="scan-required-code" class="form-control" type="text" name="bus_rider_scan_notification_subscription[][code]" autocomplete="off" placeholder="{{ t .CurrentLocale "scan_code" ""}}">
+            </div>
+            <div class="form-group">
+                <button type="submit" class="btn btn-block btn-safestop">{{ t .CurrentLocale "add_scan_code" ""}}</button>
+            </div>
+        </form>
+
+        {{ end }}
+
+
+    </li>
+
+
+    {{/*<% @subscription.user.bus_rider_scan_notification_subscriptions.each do |brsn| %>*/}}
+    {{/*<% if brsn.jurisdiction_id == @subscription.product.jurisdiction_id %>*/}}
+    {{/*<li class="list-group-item scan-li">*/}}
+        {{/*<form action="/remove_scan" method="post">*/}}
+            {{/*<input type="hidden" value="<%= form_authenticity_token %>" name="authenticity_token">*/}}
+            {{/*<input type="hidden" value="<%= @subscription.id %>" name="subscription_id">*/}}
+            {{/*<input type="hidden" value="<%= brsn.id %>" name="bus_rider_scan_notification_subscription_id">*/}}
+        {{/*</form>*/}}
+
+        {{/*<table class="list-sub-item-table">*/}}
+            {{/*<tr>*/}}
+                {{/*<td>*/}}
+                    {{/*<%= brsn.name.titlecase if brsn.name %>*/}}
+                {{/*</td>*/}}
+                {{/*<td>*/}}
+                    {{/*<i class='fa fa-check-square-o remove-student'></i>*/}}
+                {{/*</td>*/}}
+            {{/*</tr>*/}}
+        {{/*</table>*/}}
+    {{/*</li>*/}}
+    {{/*<% end %>*/}}
+    {{/*<% end if @subscription.user.bus_rider_scan_notification_subscriptions %>*/}}
+
+
+</ul>
+
+{{ end }}
+
+<script type="text/javascript">
+
+
+    $(document).ready(function () {
+
+        $('body').removeClass('app-body').addClass('app-body-scroll');
+
+
+        FormValidation.formValidation(
+                document.getElementById("sub-account-form"),
+                {
+                    fields: {
+                        'person[first_name]': {
+                            validators: {
+                                notEmpty: {
+                                    message: '{{ t .CurrentLocale "required" ""}}'
+                                }
+                            }
+                        },
+                        'person[last_name]': {
+                            validators: {
+                                notEmpty: {
+                                    message: '{{ t .CurrentLocale "required" ""}}'
+                                }
+                            }
+                        },
+                        'user[email]': {
+                            validators: {
+                                remote: {
+                                    message: '{{ t .CurrentLocale "email_address_already_in_use" "" }}',
+                                    url: '/api/email_exists',
+                                    type: 'POST',
+                                    delay: 100,
+                                },
+                                regexp: {
+                                    regexp: /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
+                                    message: '{{ t .CurrentLocale "invalid_email_format" "" }}'
+                                },
+                                notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
+                                identical: {
+                                    compare: function() {
+                                        return $("#email-confirmation").val() == undefined ? "" : $("#email-confirmation").val();
+                                    },
+                                    message: '{{ t .CurrentLocale "email_addresses_do_not_match" "" }}'
+                                }
+                            }
+                        },
+                        'user[password]': {
+                            validators: {
+                                notEmpty: {message: '{{ t .CurrentLocale "required" ""}}'},
+                                regexp: {
+                                    regexp: /^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9!@#$%^&*]{6,16}$/,
+                                    message: "<%= t('invalid_password_format', locale: current_locale) %>"
+                                }
+                            }
+                        },
+                    },
+                    plugins: {
+                        trigger: new FormValidation.plugins.Trigger(),
+                        submitButton: new FormValidation.plugins.SubmitButton(),
+                        defaultSubmit: new FormValidation.plugins.DefaultSubmit(),
+                        bootstrap: new FormValidation.plugins.Bootstrap(),
+                        icon: new FormValidation.plugins.Icon({
+                            valid: 'fa fa-check',
+                            invalid: 'fa fa-times',
+                            validating: 'fa fa-refresh',
+                        }),
+                    }
+                })
+
+
+
+    {{ if or (eq .ViewData.Jurisdiction.RegistrationType "Student Identifier") (eq .ViewData.Jurisdiction.RegistrationType "Access Code + Student Identifier") }}
+
+    FormValidation.formValidation(
+                document.getElementById("student-form"),
+                {
+                    fields: {
+                        'student_information[sis_identifier]': {
+                            validators: {
+                                notEmpty: {message: '{{ t .CurrentLocale "required" ""}}'},
+                                remote: {
+                                    message: '{{ t .CurrentLocale "invalid_student_identifier" ""}}',
+                                    url: '/api/student_exists',
+                                    type: 'post',
+                                    delay: 100,
+                                    data: function (validator, $field, value) {
+                                        return {
+                                            jurisdiction_id: {{ .ViewData.Jurisdiction.Id }},
+                                            sis_identifier: $("#student-identifier").val()
+                                        };
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    plugins: {
+                        trigger: new FormValidation.plugins.Trigger(),
+                        submitButton: new FormValidation.plugins.SubmitButton(),
+                        defaultSubmit: new FormValidation.plugins.DefaultSubmit(),
+                        bootstrap: new FormValidation.plugins.Bootstrap(),
+                        icon: new FormValidation.plugins.Icon({
+                            valid: 'fa fa-check',
+                            invalid: 'fa fa-times',
+                            validating: 'fa fa-refresh',
+                        }),
+                    }
+                })
+
+
+    {{ end }}
+
+
+        FormValidation.formValidation(
+                document.getElementById("scan-form"),
+                {
+                    fields: {
+                        'bus_rider_scan_notification_subscription[name]': {
+                            selector: '#scan-required-name',
+                            validators: {
+                                notEmpty: {message: '{{ t .CurrentLocale "required" ""}}'},
+                            }
+                        },
+                        'bus_rider_scan_notification_subscription[code]': {
+                            selector: '#scan-required-code',
+                            validators: {
+                                notEmpty: {message: '{{ t .CurrentLocale "required" ""}}'},
+                            }
+                        }
+                    },
+                    plugins: {
+                        trigger: new FormValidation.plugins.Trigger(),
+                        submitButton: new FormValidation.plugins.SubmitButton(),
+                        defaultSubmit: new FormValidation.plugins.DefaultSubmit(),
+                        bootstrap: new FormValidation.plugins.Bootstrap(),
+                        icon: new FormValidation.plugins.Icon({
+                            valid: 'fa fa-check',
+                            invalid: 'fa fa-times',
+                            validating: 'fa fa-refresh',
+                        }),
+                    }
+                })
+
+
+
+        $("#student-li, #scan-li, #sub-account-li").click(function (e) {
+            var form_li = $(this).parent().children().eq(1);
+            var i = $(this).find('i');
+            if ($(i).hasClass('fa-angle-right')) {
+                $(i).removeClass('fa-angle-right')
+                $(i).addClass('fa-angle-down')
+                $(form_li).show();
+            }
+            else {
+                $(i).removeClass('fa-angle-down')
+                $(i).addClass('fa-angle-right')
+                $(form_li).hide();
+            }
+        });
+
+
+
+        $(document).on("click", ".student-li, .scan-li, .sub-account-li", function(e){
+            e.stopPropagation();
+            var student_li = $(this);
+            var alert_name = $(student_li).find('.list-sub-item-table td:eq(0)').html().trim();
+            swal({
+                        title: "<%= t('are_you_sure', locale: current_locale) %>",
+                        text: "<%= t('ss_client_subscription_details_js_3', locale: current_locale) %> " + alert_name,
+                        type: "warning",
+                        showCancelButton: true,
+                        confirmButtonColor: "#A31F2D",
+                        confirmButtonText: "Okay",
+                        cancelButtonText: "Cancel",
+                        closeOnConfirm: true,
+                        closeOnCancel: true
+                    },
+                    function (isConfirm) {
+                        if (isConfirm) {
+                            $(student_li).find('form').submit();
+                        }
+                    })
+        })
+
+
+    });
+
+
+
+
+</script>
+        
+
 
 {{end}}
