--- a/views/AppController/subscription_details.html
+++ b/views/AppController/subscription_details.html
@@ -5,10 +5,6 @@
 
 
 
-
-
-
-
 <div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 section-header">
@@ -17,8 +13,6 @@
         </div>
     </div>
 </div>
-
-
 
 <ul class="list-group" style="margin-bottom: 0px;">
 
@@ -40,17 +34,20 @@
             <div class="form-group">
                 <input id="email" class="form-control" type="text" name="user[email]" autocomplete="off" placeholder="{{ t .CurrentLocale "email" "" }}">
             </div>
-            <div class="form-group">
-                <input id="password" class="form-control" type="password" name="user[password]" autocomplete="off" placeholder="{{ t .CurrentLocale "password" "" }}">
-            </div>
-            <div class="form-group">
-                <input id="confirm-password" class="form-control" type="password" name="user[password_confirmation]" autocomplete="off" placeholder="{{ t .CurrentLocale "confirm_password" "" }}">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="person[first_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "first_name" "" }}">
-            </div>
-            <div class="form-group">
-                <input class="form-control" type="text" name="person[last_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "last_name" "" }}">
+
+            <div id="create-user-fields" style="display:none">
+                <div class="form-group">
+                    <input id="password" class="form-control" type="password" name="user[password]" autocomplete="off" placeholder="{{ t .CurrentLocale "password" ""}}">
+                </div>
+                <div class="form-group">
+                    <input id="confirm-password" class="form-control" type="password" name="user[password_confirmation]" autocomplete="off" placeholder="{{ t .CurrentLocale "confirm_password" ""}}">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="person[first_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "first_name" ""}}">
+                </div>
+                <div class="form-group">
+                    <input class="form-control" type="text" name="person[last_name]" autocomplete="off" placeholder="{{ t .CurrentLocale "last_name" ""}}">
+                </div>
             </div>
 
             <div class="form-group">
@@ -193,7 +190,7 @@
             {{ end }}
 
             <div class="form-group">
-                <button class="btn btn-block btn-safestop" id="add-scan-using-scan-code-mapping-button"><%= t('add_my_students', locale: current_locale) %></button>
+                <button class="btn btn-block btn-safestop" id="add-scan-using-scan-code-mapping-button">{{ t .CurrentLocale "add_my_students" "" }}</button>
             </div>
         </form>
         {{ end }}
@@ -276,23 +273,11 @@
                         },
                         'user[email]': {
                             validators: {
-                                remote: {
-                                    message: '{{ t .CurrentLocale "email_address_already_in_use" "" }}',
-                                    url: '/api/email_exists',
-                                    type: 'POST',
-                                    delay: 100,
-                                },
                                 regexp: {
                                     regexp: /^(([^<>()[\]\\.,;:\s@\"]+(\.[^<>()[\]\\.,;:\s@\"]+)*)|(\".+\"))@((\[[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}\])|(([a-zA-Z\-0-9]+\.)+[a-zA-Z]{2,}))$/,
                                     message: '{{ t .CurrentLocale "invalid_email_format" "" }}'
                                 },
                                 notEmpty: {message: '{{ t .CurrentLocale "required" "" }}'},
-                                identical: {
-                                    compare: function() {
-                                        return $("#email-confirmation").val() == undefined ? "" : $("#email-confirmation").val();
-                                    },
-                                    message: '{{ t .CurrentLocale "email_addresses_do_not_match" "" }}'
-                                }
                             }
                         },
                         'user[password]': {
@@ -300,7 +285,7 @@
                                 notEmpty: {message: '{{ t .CurrentLocale "required" ""}}'},
                                 regexp: {
                                     regexp: /^(?=.*[0-9])(?=.*[A-Z])[a-zA-Z0-9!@#$%^&*]{6,16}$/,
-                                    message: "<%= t('invalid_password_format', locale: current_locale) %>"
+                                    message: '{{ t .CurrentLocale "invalid_password_format" "" }}'
                                 }
                             }
                         },
@@ -415,8 +400,8 @@
             var student_li = $(this);
             var alert_name = $(student_li).find('.list-sub-item-table td:eq(0)').html().trim();
             swal({
-                        title: "<%= t('are_you_sure', locale: current_locale) %>",
-                        text: "<%= t('ss_client_subscription_details_js_3', locale: current_locale) %> " + alert_name,
+                        title: '{{ t .CurrentLocale "are_you_sure" ""}}',
+                        text: '{{ t .CurrentLocale "ss_client_subscription_details_js_3" "" }}' + alert_name
                         type: "warning",
                         showCancelButton: true,
                         confirmButtonColor: "#A31F2D",
@@ -433,13 +418,45 @@
         })
 
 
+
+
+        $(document).on('keyup', '#email', function(){
+            check_for_existing_users();
+        })
+
+        $(document).on("focusin", ".password", function(){
+            check_for_existing_users();
+        })
+
+
+
     });
+
+
+
+    function check_for_existing_users(){
+        var email = $("#email").val();
+        if(email.length == 0){
+            $("#create-user-fields").hide();
+        }
+        else{
+            $.get('/api/email_exists', { 'user[email]': email }, function(response){
+                if(response.valid){
+                    $("#create-user-fields").show();
+                }
+                else{
+                    $("#create-user-fields").hide();
+                }
+            })
+        }
+    }
+
 
 
 
 
 </script>
-        
+
 
 
 {{end}}
